--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: polyhobbyist
+description: Random projects, gadgets, components, maybe even tutorials and walkthroughs
+
 theme: jekyll-theme-hacker
+
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+ - jekyll-remote-theme # add this line to the plugins list if you already have one
